@@ -1,3 +1,8 @@
+2003-08-08  Gary Thomas  <gary@mind.be>
+
+	* src/pxa2x0_misc.c: 
+	* include/hal_pxa2x0.h: Support GPIO alternate functions.
+
 2003-07-18  Nick Garnett  <nickg@balti.calivar.com>
 
 	* cdl/hal_arm_xscale_pxa2x0.cdl:
